--- a/package.json
+++ b/package.json
@@ -4,13 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "lint": "eslint **/*.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.4",
     "ndarray": "^1.0.18",
-    "ndarray-show": "^2.0.0"
+    "ndarray-diagonal": "^1.0.0",
+    "ndarray-ops": "^1.2.2",
+    "ndarray-scratch": "^1.2.0",
+    "ndarray-show": "^2.0.0",
+    "ndarray-string": "^1.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.0.2",
+    "eslint": "^4.0.0",
+    "mocha": "^3.4.2"
   }
 }
