--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "nyc --reporter=html --reporter=text mocha",
     "lint": "eslint **/*.js"
   },
   "author": "",
@@ -21,6 +21,7 @@
   "devDependencies": {
     "chai": "^4.0.2",
     "eslint": "^4.0.0",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "nyc": "^11.0.2"
   }
 }
